--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.10"
 psycopg2 = "^2.9.10"
 pillow = "^11.0.0"
 python-dotenv = "^1.0.1"
+django-ckeditor = "^6.7.2"
 
 
 [build-system]
