--- a/sample.env
+++ b/sample.env
@@ -7,3 +7,11 @@ USER=
 PASSWORD=
 HOST=
 PORT=
+
+# Для работ с сервисом рассылок
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS =
+EMAIL_USE_SSL =
